# icm42688p-rs

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/.cargo/: config.toml
src/: config.rs  error.rs  fifo.rs  interface.rs  lib.rs  register.rs
