workspace = { members = ["examples"] }
[package]
name = "icm42688p"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.4.2"
