[package]
name = "icm42688p-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icm42688p = { path = "../" }
embassy-stm32 = { version = "0.1", features = [
    "stm32f411ce",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "chrono",
] }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
